# invocator

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/skills/todo-executor/: SKILL.md
.claude/skills/todo-orchestrator/: SKILL.md
.claude/skills/todo-progress/: SKILL.md
.claude/skills/todo-tests/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/: BACKEND_STANDARDS.md  STANDARDS.md
docs/todos/: README.md  todo_scaffold.md
src/invocator/: cache.py  classify.py  cli.py  config.py  gh_client.py  models.py  prompts.py  result.py  summon.py  synthesize.py
src/invocator/commands/: extract.py  forge.py  scry.py
src/invocator/rules/: adr.py  conventional.py  labels.py  review_cues.py  trivial_filter.py
tests/: test_cache.py  test_classify.py  test_cli_smoke.py  test_config.py  test_gh_client.py  test_models.py  test_result.py  test_summon.py  test_synthesize.py
tests/commands/: test_extract.py  test_forge.py  test_scry.py
tests/rules/: test_adr.py  test_conventional.py  test_labels.py  test_review_cues.py  test_trivial_filter.py
